Added LightGBM classifier, rearranged, plus created image folder

--- a/Census Income Classification.ipynb
+++ b/Census Income Classification.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from IPython.core.display import HTML\n",
@@ -26,7 +28,7 @@
     "- Data analysis (pandas)\n",
     "- Plotting (matplotlib, seaborn)\n",
     "- Machine learning (scikit-learn)\n",
-    "- Gradient-boosted trees (xgboost)\n",
+    "- Gradient-boosted trees (xgboost. lightgbm)\n",
     "- Deep learning (tensorflow, keras, keras_metrics)\n",
     "\n",
     "Uncomment for first run!!"
@@ -35,7 +37,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "'''import sys\n",
@@ -45,6 +49,7 @@
     "!{sys.executable} -m pip install seaborn\n",
     "!{sys.executable} -m pip install sklearn\n",
     "!{sys.executable} -m pip install xgboost\n",
+    "!{sys.executable} -m pip install lightgbm\n",
     "!{sys.executable} -m pip install tensorflow\n",
     "!{sys.executable} -m pip install keras\n",
     "!{sys.executable} -m pip install keras_metrics\n",
@@ -54,7 +59,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -85,7 +92,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "col_names = [\n",
@@ -113,7 +122,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df.shape"
@@ -122,7 +133,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df.info()"
@@ -131,7 +144,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df.describe()"
@@ -150,7 +165,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df = df.drop('fnlwgt', axis=1)\n",
@@ -174,7 +191,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(10,4))\n",
@@ -192,11 +211,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(12,6))\n",
     "sns.countplot(x = df['income'], hue = df['education-num'], palette = 'rainbow', edgecolor = [(0,0,0), (0,0,0)])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,4))\n",
+    "sns.countplot(y = df['income'], hue = df['sex'], palette = 'Set1', edgecolor = [(0,0,0), (0,0,0)])\n",
     "plt.show()"
    ]
   },
@@ -209,17 +243,6 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(12,4))\n",
-    "sns.countplot(y = df['income'], hue = df['sex'], palette = 'Set1', edgecolor = [(0,0,0), (0,0,0)])\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(12,4))\n",
     "sns.countplot(y = df['income'], hue = df['marital-status'], palette = 'Set1', edgecolor = [(0,0,0), (0,0,0)])\n",
     "plt.show()"
    ]
@@ -227,7 +250,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(12,4))\n",
@@ -238,7 +263,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(12,6))\n",
@@ -249,7 +276,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(12,4))\n",
@@ -260,7 +289,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(12,5))\n",
@@ -271,7 +302,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(12, 6))\n",
@@ -289,7 +322,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df.info()"
@@ -298,7 +333,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df[df.isnull().any(axis=1)]"
@@ -307,7 +344,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df['native-country'].value_counts().head(10)"
@@ -316,7 +355,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df['native-country'].fillna('United-States', inplace=True)\n",
@@ -326,7 +367,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df['workclass'].value_counts()"
@@ -335,7 +378,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df['workclass'].fillna('Private', inplace=True)\n",
@@ -345,7 +390,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df['occupation'].value_counts()"
@@ -354,7 +401,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df[df.isnull().any(axis=1)]"
@@ -363,7 +412,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df.dropna(inplace=True)\n",
@@ -380,7 +431,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "tdf = pd.get_dummies(df, columns=[\n",
@@ -397,7 +450,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "tdf.info()"
@@ -413,7 +468,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split"
@@ -429,7 +486,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "X = tdf.drop('income', axis=1)\n",
@@ -446,7 +505,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=42)"
@@ -471,7 +532,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.feature_selection import SelectKBest, chi2"
@@ -480,7 +543,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "feature_select = SelectKBest(chi2, k=30)\n",
@@ -497,7 +562,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "uni_features = list(zip(feature_select.scores_, X_train.columns))\n",
@@ -514,7 +581,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import warnings\n",
@@ -531,7 +600,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def plot_metrics(classifier):\n",
@@ -546,7 +617,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def plot_roc_curve(classifier, classifier_name):\n",
@@ -567,13 +640,16 @@
     "    plt.ylabel('True Positive Rate = Recall')\n",
     "    plt.title('Receiver operating characteristic')\n",
     "    plt.legend(loc=\"lower right\")\n",
+    "    plt.savefig('img/ROC_' + classifier_name)\n",
     "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def plot_cap_curve(classifier, classifier_name):\n",
@@ -620,24 +696,27 @@
     "    \n",
     "    fig, ax = plt.subplots(nrows = 1, ncols = 1)\n",
     "    ax.plot(ideal['x'],ideal['y'], color='dimgrey', label='Perfect Model')\n",
-    "    ax.plot(xx,yy, color='red', label=classifier_name)\n",
+    "    ax.plot(xx,yy, color='red', label=\"%s (AR = %0.3f)\" % (classifier_name, ar_value))\n",
     "    ax.plot(xx,xx, color='blue', label='Random Model')\n",
     "    ax.plot([percent, percent], [0.0, val], color='green', linestyle='--', linewidth=1)\n",
     "    ax.plot([0, percent], [val, val], color='green', linestyle='--', linewidth=1, label='%0.3f%% of positive obs at %0.1f%%' % (val*100, percent*100))\n",
     "    \n",
     "    plt.xlim(-0.05, 1.05)\n",
     "    plt.ylim(0, 1.05)\n",
-    "    plt.title(\"CAP Curve - a_r value = %0.3f\" % ar_value)\n",
+    "    plt.title(\"Cumulative accuracy profile\")\n",
     "    plt.xlabel('% of the data')\n",
     "    plt.ylabel('% of positive obs')\n",
     "    plt.legend()\n",
+    "    plt.savefig('img/CAP_' + classifier_name)\n",
     "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def classify_and_plot(classifier):\n",
@@ -647,7 +726,7 @@
     "    classifier.fit(X_train, y_train)\n",
     "    plot_metrics(classifier)\n",
     "    plot_roc_curve(classifier, classifier_name)\n",
-    "    #plot_cap_curve(classifier, classifier_name)\n",
+    "    plot_cap_curve(classifier, classifier_name)\n",
     "    joblib.dump(classifier, 'models/' + classifier_name + '.pkl')\n",
     "    return classifier"
    ]
@@ -669,7 +748,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -692,7 +773,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -708,13 +789,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Naive Bayes Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "pipeline = Pipeline([\n",
+    "    ('select', feature_select),\n",
+    "    ('GaussianNB_30', GaussianNB(priors=[0.75, 0.25])),\n",
+    "])\n",
+    "classify_and_plot(pipeline)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "pipeline = Pipeline([\n",
+    "    ('GaussianNB_80', GaussianNB(priors=[0.75, 0.25])),\n",
+    "])\n",
+    "classify_and_plot(pipeline)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Decision Tree Classifier"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
@@ -735,7 +856,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "'''#!{sys.executable} -m pip install --quiet pydotplus\n",
@@ -753,13 +876,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Ensemble Classifiers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Random Forest Classifier"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -774,28 +906,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Gradient Boosted Trees"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import xgboost as xkg\n",
-    "pipeline = Pipeline([\n",
-    "    ('select', feature_select),\n",
-    "    ('XGBClassifier', xkg.XGBClassifier(max_depth=100)),\n",
-    "])\n",
-    "classify_and_plot(pipeline)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Naive Bayes Classifier"
+    "## AdaBoost"
    ]
   },
   {
@@ -806,23 +917,56 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
     "pipeline = Pipeline([\n",
     "    ('select', feature_select),\n",
-    "    ('GaussianNB_30', GaussianNB(priors=[0.75, 0.25])),\n",
+    "    ('AdaBoostClassifier', AdaBoostClassifier(n_estimators=100)),\n",
     "])\n",
     "classify_and_plot(pipeline)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XGBoost"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "from sklearn.naive_bayes import GaussianNB\n",
+    "from xgboost.sklearn import XGBClassifier\n",
     "pipeline = Pipeline([\n",
-    "    ('GaussianNB_80', GaussianNB(priors=[0.75, 0.25])),\n",
+    "    ('select', feature_select),\n",
+    "    ('XGBClassifier', XGBClassifier(max_depth=100)),\n",
+    "])\n",
+    "classify_and_plot(pipeline)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Microsoft LightGBM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from lightgbm.sklearn import LGBMClassifier\n",
+    "pipeline = Pipeline([\n",
+    "    ('select', feature_select),\n",
+    "    ('LightGBM', LGBMClassifier()),\n",
     "])\n",
     "classify_and_plot(pipeline)"
    ]
@@ -844,7 +988,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.svm import LinearSVC\n",
@@ -866,7 +1012,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.svm import SVC\n",
@@ -888,7 +1036,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.svm import SVC\n",
@@ -917,11 +1067,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Dropout, Activation\n",
+    "from keras.layers.advanced_activations import LeakyReLU\n",
     "from keras.wrappers.scikit_learn import KerasClassifier\n",
     "from keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "import keras_metrics"
@@ -941,16 +1094,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def create_model():\n",
     "    model = Sequential()\n",
-    "    model.add(Dense(40, kernel_initializer='uniform', activation='relu', input_dim=X_train.shape[1]))\n",
+    "    model.add(Dense(40, kernel_initializer='normal', activation='relu', input_dim=X_train.shape[1]))\n",
+    "    #model.add(LeakyReLU(alpha=0.001))\n",
     "    model.add(Dropout(rate=0.1))\n",
-    "    model.add(Dense(20, kernel_initializer='uniform', activation='relu'))\n",
+    "    model.add(Dense(20, kernel_initializer='normal', activation='relu'))\n",
+    "    #model.add(LeakyReLU(alpha=0.001))\n",
     "    model.add(Dropout(rate=0.1))\n",
-    "    model.add(Dense(1, kernel_initializer='uniform', activation='sigmoid'))\n",
+    "    model.add(Dense(1, kernel_initializer='normal', activation='sigmoid'))\n",
     "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[\n",
     "        'accuracy', \n",
     "        #keras_metrics.precision(), \n",
@@ -973,7 +1130,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "'''checkpoint = ModelCheckpoint('models/best_model.hdf5', monitor='val_acc',\n",
@@ -1008,7 +1167,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": []
   }
