Added metrics comparison

--- a/Census Income Classification.ipynb
+++ b/Census Income Classification.ipynb
@@ -588,10 +588,12 @@
    "source": [
     "import warnings\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix, f1_score, classification_report, roc_auc_score, roc_curve\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, f1_score, classification_report, roc_auc_score, roc_curve, precision_recall_curve, recall_score, average_precision_score, precision_score\n",
     "from sklearn.externals import joblib\n",
     "from sklearn.exceptions import DataConversionWarning\n",
+    "\n",
+    "metrics = {}\n",
     "\n",
     "warnings.filterwarnings(action='ignore', category=DataConversionWarning)\n",
     "joblib.dump(list(X.columns), 'models/columns.pkl')"
@@ -605,12 +607,23 @@
    },
    "outputs": [],
    "source": [
-    "def plot_metrics(classifier):\n",
+    "def plot_metrics(classifier, classifier_name):\n",
     "    prediction = classifier.predict(X_test)\n",
-    "    print('Accuracy is: %0.3f' % accuracy_score(y_test, prediction))\n",
-    "    print('F1 Score is: %0.3f' % f1_score(y_test, prediction, pos_label=\">50K\"))\n",
+    "    accuracy = accuracy_score(y_test, prediction)\n",
+    "    f1 = f1_score(y_test, prediction, pos_label=\">50K\")\n",
+    "    recall = recall_score(y_test, prediction, pos_label=\">50K\")\n",
+    "    precision = precision_score(y_test, prediction, pos_label=\">50K\")\n",
+    "    specificity = recall_score(y_test, prediction, pos_label=\"<=50K\")\n",
+    "    print('Accuracy: %0.3f. Precision: %0.3f. Recall: %0.3f. F1 Score: %0.3f. Specificity: %0.3f' % (accuracy, precision, recall, f1, specificity))\n",
     "    print(classification_report(y_test, prediction))\n",
     "    sns.heatmap(confusion_matrix(y_test, prediction), annot=True, fmt=\"d\")\n",
+    "    metrics[classifier_name] = {\n",
+    "        'accuracy': accuracy,\n",
+    "        'precision': precision,\n",
+    "        'recall': recall,\n",
+    "        'f1': f1,\n",
+    "        'specificity': specificity,\n",
+    "    }\n",
     "    plt.show()"
    ]
   },
@@ -641,6 +654,34 @@
     "    plt.title('Receiver operating characteristic')\n",
     "    plt.legend(loc=\"lower right\")\n",
     "    plt.savefig('img/ROC_' + classifier_name)\n",
+    "    metrics[classifier_name]['roc_score'] = roc_score\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_precision_recall(classifier, classifier_name):\n",
+    "    try:\n",
+    "        prob_pos = classifier.predict_proba(X_test)[:,1]\n",
+    "    except:\n",
+    "        prob_pos = classifier.decision_function(X_test)\n",
+    "        prob_pos = (prob_pos - prob_pos.min()) / (prob_pos.max() - prob_pos.min())\n",
+    "        print('Probabilities estimated from decision function!')\n",
+    "    fpr, tpr, thresholds = precision_recall_curve(y_test, prob_pos, pos_label=\">50K\")\n",
+    "    plt.figure()\n",
+    "    roc_score = recall_score(y_test, classifier.predict(X_test), pos_label=\">50K\")\n",
+    "    plt.plot(fpr, tpr, label='%s (recall = %0.3f)' % (classifier_name, roc_score))\n",
+    "    plt.xlim([-0.05, 1.05])\n",
+    "    plt.ylim([0.0, 1.05])\n",
+    "    plt.xlabel('False Positive Rate = 1 - Specificity')\n",
+    "    plt.ylabel('True Positive Rate = Recall')\n",
+    "    plt.title('Precision-Recall curve')\n",
+    "    plt.legend(loc=\"lower right\")\n",
+    "    plt.savefig('img/PRC_' + classifier_name)\n",
     "    plt.show()"
    ]
   },
@@ -708,6 +749,7 @@
     "    plt.ylabel('% of positive obs')\n",
     "    plt.legend()\n",
     "    plt.savefig('img/CAP_' + classifier_name)\n",
+    "    metrics[classifier_name]['ar_value'] = ar_value\n",
     "    plt.show()"
    ]
   },
@@ -724,8 +766,9 @@
     "    if classifier_name == 'Pipeline':\n",
     "        classifier_name = classifier.steps[-1][0]\n",
     "    classifier.fit(X_train, y_train)\n",
-    "    plot_metrics(classifier)\n",
+    "    plot_metrics(classifier, classifier_name)\n",
     "    plot_roc_curve(classifier, classifier_name)\n",
+    "    plot_precision_recall(classifier, classifier_name)\n",
     "    plot_cap_curve(classifier, classifier_name)\n",
     "    joblib.dump(classifier, 'models/' + classifier_name + '.pkl')\n",
     "    return classifier"
@@ -755,7 +798,7 @@
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "pipeline = Pipeline([\n",
-    "    ('select', feature_select),\n",
+    "    ('select', SelectKBest(chi2, k=30)),\n",
     "    ('scaler', StandardScaler()),\n",
     "    ('KNeighborsClassifier', KNeighborsClassifier()),\n",
     "])\n",
@@ -773,7 +816,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -1168,8 +1211,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "matrics_df = pd.DataFrame.from_dict(metrics, orient='index')\n",
+    "matrics_df.style.background_gradient(cmap=\"coolwarm\").format('{:.3f}').set_properties(**{'min-width': '6em'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
