Install PyTables if it's not there

--- a/IMDB Reviews Sentiment Classification.ipynb
+++ b/IMDB Reviews Sentiment Classification.ipynb
@@ -65,6 +65,7 @@
     "!{sys.executable} -m pip install tensorflow\n",
     "!{sys.executable} -m pip install keras\n",
     "!{sys.executable} -m pip install keras_metrics\n",
+    "!{sys.executable} -m pip install tables\n",
     "!{sys.executable} -m pip install h5py'''"
    ]
   },
